--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.GeoQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".SplashScreenActivity"
+            android:exported="false"
+            android:label="SplashScreen"/>
+        <activity
             android:name=".CheatActivity"
             android:exported="false" />
         <activity
